--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </ul>
             <ul id="links">
                 <li><a rel="Anya Bardach's Profile" href="https://www.linkedin.com/in/anyabardach">
-                    <img id="l-img" rel="LinkedIn logo" src=images/LinkedIn.png>
+                    <img aria-describedby="the word 'in' in white on a blue blackground" lid="l-img" rel="LinkedIn logo" src=images/LinkedIn.png>
                     <br>LinkedIn</a></li>
-                <li><a rel="Anya Bardach's Repositories" href="https://github.com/anyabardach">
-                    <img id="l-img" rel="GitHub logo" src=images/GitHub.png>
+                <li><a rel="Anya Bardach's Repositories" href="https://github.com/anyabdch">
+                    <img aria-describedby="black circle outlining the GitHub octocat" id="l-img" rel="GitHub logo" src=images/GitHub.png>
                     <br>GitHub</a></li>
             </ul>
             <div id="menu" onmouseleave="openClose('menubar');">
