--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="home">
-            <img id="b-img" rel="me!" src="images/profile.jpg">
+            <img class="b-img" rel="me!" src="images/profile.jpg">
             <h1 id="name">Anya Bardach</h1>
             <h3 id="bio"><i>Student at Northwestern University pursuing a BA in Computer Science and a BS in Human Development</i></h3>
             <ul id="contact">
@@ -19,10 +19,10 @@
             </ul>
             <ul id="links">
                 <li><a rel="Anya Bardach's Profile" href="https://www.linkedin.com/in/anyabardach">
-                    <img aria-describedby="the word 'in' in white on a blue blackground" id="l-img" rel="LinkedIn logo" src=images/LinkedIn.png>
+                    <img class="l-img" rel="LinkedIn logo" src=images/LinkedIn.png>
                     <br>LinkedIn</a></li>
-                <li><a rel="Anya Bardach's Repositories" href="https://github.com/anyabdch">
-                    <img aria-describedby="black circle outlining the GitHub octocat" id="l-img" rel="GitHub logo" src=images/GitHub.png>
+                <li><a rel="Anya Bardach's Repositories" href="https://www.linkedin.com/in/anyabardach">
+                    <img class="l-img" rel="GitHub logo" src=images/GitHub.png>
                     <br>GitHub</a></li>
             </ul>
             <div id="menu" onmouseleave="openClose('menubar');">
@@ -39,6 +39,12 @@
         <h1 id="title">Portfolio</h1>
         <div id="projects">
             <script>listProjects(projects)</script>
+        </div>
+        <div id="nyt">
+            <h3>If I could make this a resume line about dedication, I would</h3>
+            <img class="n-img" rel="November crosswords" src="images/nyt3.jpg">
+            <img class="n-img" rel="December crosswords" src="images/nyt2.jpg">
+            <img class="n-img" rel="January crosswords" src="images/nyt1.jpg">
         </div>
         <div id="disclaimer">
             <button onclick="openClose('disclaimer');">&#10007</button>
