--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a rel="Anya Bardach's Profile" href="https://www.linkedin.com/in/anyabardach">
                     <img class="l-img" rel="LinkedIn logo" src=images/LinkedIn.png>
                     <br>LinkedIn</a></li>
-                <li><a rel="Anya Bardach's Repositories" href="https://www.linkedin.com/in/anyabardach">
+                <li><a rel="Anya Bardach's Repositories" href="https://github.com/anyabdch">
                     <img class="l-img" rel="GitHub logo" src=images/GitHub.png>
                     <br>GitHub</a></li>
             </ul>
