--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
         </div>
         <div id="disclaimer">
             <button onclick="openClose('disclaimer');">&#10007</button>
-            <p>This site is built from scratch without any templates or frameworks.</p>
+            <p>This site was built for class from scratch without any templates or frameworks.</p>
         </div> 
 </html>
