--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Anya Bardach</title>
     </head>
     <body>
+        <div>
         <header class="home">
             <img class="b-img" rel="me!" src="images/profile.jpg">
             <h1 id="name">Anya Bardach</h1>
@@ -36,6 +37,7 @@
                 </nav>
             </div>
         </header>
+        </div>
         <h1 id="title">Portfolio</h1>
         <div id="projects">
             <script>listProjects(projects)</script>
