--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="home">
             <img class="b-img" rel="me!" src="images/profile.jpg">
             <h1 id="name">Anya Bardach</h1>
-            <h3 id="bio"><i>Student at Northwestern University pursuing BSEd in Social Policy and Education, and an MS in Computer Science </i></h3>
+            <h3 id="bio"><i>Student at Northwestern University pursuing a BSEd in Social Policy and Education, and an MS in Computer Science </i></h3>
             <ul id="contact">
                 <li>&#128205 Santa Monica, CA</li>
                 <li>&#9993 anya.bardach@gmail.com</li>
