--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Anya Bardach</title>
     </head>
     <body>
-        <header class="home">
+        <header class="home outlined">
             <img class="b-img" rel="me!" src="images/profile.jpg">
             <h1 id="name">Anya Bardach</h1>
             <h3 id="bio"><i>Student at Northwestern University pursuing a BSEd in Social Policy and Education, and an MS in Computer Science </i></h3>
