--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
             <div id="nyt">
                 <h3>If I could make this a resume line about dedication, I would</h3>
-                <img class="n-img" rel="November crosswords" src="images/nyt3.jpg">
-                <img class="n-img" rel="December crosswords" src="images/nyt2.jpg">
-                <img class="n-img" rel="January crosswords" src="images/nyt1.jpg">
+                <img class="n-img outlined" rel="November crosswords" src="images/nyt3.jpg">
+                <img class="n-img outlined" rel="December crosswords" src="images/nyt2.jpg">
+                <img class="n-img outlined" rel="January crosswords" src="images/nyt1.jpg">
             </div>
-            <div id="disclaimer">
+            <div id="disclaimer" class="outlined">
                 <button onclick="openClose('disclaimer');">&#10007</button>
                 <p>This site was built for class from scratch without any templates or frameworks.</p>
             </div> 
