--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
-{% extends "website/master.html" %}
+<html>
+   
+    <head>
+        <meta charset="utf-8">
+        <meta name="keywords" content="Anya, Anya Bardach, Bardach, Northwestern">
+        <link rel="stylesheet" href="/styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="/main.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <title>Home Page</title>
+    </head>
 
-{% load static %}
 
-    {% block title %} Home Page {% endblock %}
+    <body class="container text-center">
+        <div id="menuHeader" class="navbar navbar-expand-lg"> 
+            <div class="container-fluid">    
+                <a class="navbar-brand" href="/">Anya Bardach</a>
+                <button id="bNav" class="navbar-toggler hidden" type="button" data-bs-toggle="collapse" data-bs-target="#flexibleNav" aria-controls="flexibleNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="flexibleNav" class="">
+                    <ul class="nav nav-pills">
+                        <li class="nav-item"><a class="nav-link" href="/bio">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
+                        <li class="nav-item" style="display: inline-flex;">
+                            <a href="#contact" onclick="meineFunktion()">
+                                <button id="contactButton" type="button" class="btn btn-secondary">Get in touch</button>
+                            </a>
+                            <a href="https://github.com/anyabdch">
+                                <img rel="GitHub logo" src="/images/GitHub.png" width="auto" height="30" style="padding: 0px 10px;">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
-    {% block body %}
-        <img id="b-img" rel="me!" src="{% static 'website/images/profile.png' %}">
+        <img id="b-img" rel="me!" src="/images/profile.png">
         <section id="introSection">
             <div id="bio">
                 <h1 id="name"> Hey, I'm Anya </h1>
@@ -17,39 +49,7 @@
                 <h1>Featured Projects</h1>
             </div>
             <div id="projectSlides" class="col carousel carousel-dark slide w-400">
-                <div class="carousel-indicators">
-                    {% for project in projects %}
-                        {% if forloop.first %}
-                            <button type="button" data-bs-target="#projectSlides" data-bs-slide-to={{forloop.counter0}} class="active" aria-current="true" aria-label="Project {{forloop.counter}}"></button>
-                        {% else %}
-                            <button type="button" data-bs-target="#projectSlides" data-bs-slide-to={{forloop.counter0}} aria-label="Project {{forloop.counter}}"></button>
-                        {% endif %}
-                    {% endfor %}
-                </div>
-                <div class="carousel-inner">
-                    {% for project in projects %}
-                        {% if forloop.first %}
-                            <div class="carousel-item active">
-                        {% else %}
-                            <div class="carousel-item">
-                        {% endif %}
-                                    <a class="deets"
-                                       rel="{{project.title}} Repository"
-                                        href="//{{project.site}}"> 
-                                        <img class="p-img" src="\static\website\images\{{project.title}}.png">                                       <h1>{{project.title}}</h1>
-                                        <p>{{project.desc}}</p>
-                                    </a>
-                            </div>
-                        {% endfor %}
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#projectSlides" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true" style="color: black !important;"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#projectSlides" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
+                <script>listProjects(projects)</script>
             </div>
         </section>
         <section id="aboutSection" class="hidden" style="height: 42vw;">
@@ -85,4 +85,42 @@
             }
         }
     </script>
-    {% endblock %}
+
+                <hr>
+        <footer class="container text-center row">
+                <div class="col">
+                  <h4>Skills</h4>
+                  <ul>
+                    <li> Language agnostic </li>
+                    <li> Diverse IDE and framework knowledge </li>
+                    <li> Office technology skills </li>
+                    <li> Multilingual</li>
+                </div>
+                <div data-bs-spy="scroll" data-bs-target="#menuHeader" data-bs-smooth-scroll="true" class="col scrollspy-example">
+                    <ul id="contact">
+                        <li>&#128205 Santa Monica, CA</li>
+                        <li>&#9993 anya.bardach@gmail.com</li>
+                        <li>&#128222 (310) 339-0032</li>
+                    </ul>
+                    <ul id="links">
+                        <li><a rel="Anya Bardach's Profile" href="https://www.linkedin.com/in/anyabardach">
+                            <img class="l-img" rel="LinkedIn logo" src="/images/LinkedIn.png">
+                            <br>LinkedIn</a></li>
+                        <li><a rel="Anya Bardach's Repositories" href="https://github.com/anyabdch">
+                            <img class="l-img" rel="GitHub logo" src="/images/GitHub.png">
+                            <br>GitHub</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Interests</h4>
+                    <ul>
+                        <li>Sustainable tech</li>
+                        <li>User-centered software</li>
+                        <li>The New York Times Games suite</il>
+                        <li>Peak bagging</li>
+                        <li>Collective action</li>
+                    </ul>
+                </div>
+              </div>
+        </footer>
+    </body>
