--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </button>
                 <div id="flexibleNav" class="">
                     <ul class="nav nav-pills">
-                        <li class="nav-item"><a class="nav-link" href="/bio">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="bio.html">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                         <li class="nav-item" style="display: inline-flex;">
                             <a href="#contact" onclick="meineFunktion()">
                                 <button id="contactButton" type="button" class="btn btn-secondary">Get in touch</button>
