--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <div class="head" id="projectsTitle">
                 <h1>Featured Projects</h1>
             </div>
+           <h3>Coming soon! For now, check the GitHub :)</h3>
             <div id="projectSlides" class="col carousel carousel-dark slide w-400">
                 <script>listProjects(projects)</script>
             </div>
