Add carousel functionality

--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
             </div>
         </section>
         <section id="projectsSection">
-            <div class="head" id="projectsTitle">
-                <h1>Featured Projects</h1>
-            </div>
-           <h3>Coming soon! For now, check the GitHub :)</h3>
+            <h2 id="featured-projects-title">Featured Projects</h2>
+            <div id="projects"></div>
             <div id="projectSlides" class="col carousel carousel-dark slide w-400">
                 <script>listProjects(projects)</script>
             </div>
