--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 
 
     <body class="container text-center">
-        <div id="menuHeader" class="navbar navbar-expand-lg"> 
+        <div class="menuHeader navbar navbar-expand-lg"> 
             <div class="container-fluid">    
                 <a class="navbar-brand" href="/">Anya Bardach</a>
                 <button id="bNav" class="navbar-toggler hidden" type="button" data-bs-toggle="collapse" data-bs-target="#flexibleNav" aria-controls="flexibleNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,8 +58,7 @@
                 <div data-bs-spy="scroll" data-bs-target="#menuHeader" data-bs-smooth-scroll="true" class="col scrollspy-example">
                     <ul id="contact">
                         <li>&#128205 Santa Monica, CA</li>
-                        <li>&#9993 anya.bardach@gmail.com</li>
-                        <li>&#128222 (310) 339-0032</li>
+                        <li>&#9993 anya[dot]bardach[at]gmail[dot]com</li>
                     </ul>
                     <ul id="links">
                         <li><a rel="Anya Bardach's Profile" href="https://www.linkedin.com/in/anyabardach">
