--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </section>
         <section id="projectsSection" data-aos="fade-up" data-aos-duration="1000">
-            <h2 class="section-title">Featured Projects</h2>
+            <h2 class="section-title">Recent Work</h2>
             <div id="projects"></div>
         </section>
         
