--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section id="introSection">
             <div id="bio">
                 <h1 id="name"> Hey, I'm Anya </h1>
-                <h3 style="font-size: smaller;"><i>Computer Science Master's student at Northwestern University with a BS in Education and Social Policy</i></h3>
+                <h3 style="font-size: smaller;"><i>Recent Northwestern graduate working at integrating generative AI into educational spaces in meaningful, learner-centered ways</i></h3>
                 <div class="typed-bio-container">
                     <span id="typed-text"></span>
                 </div>
@@ -227,3 +227,4 @@
             });
         </script>
     </body>
+
